--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -43,24 +44,3 @@
           Brooklyn, NY 11201
         </p>
       </div>
-
-      <div>
-        <h3>Links</h3>
-        <p>
-          <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Afordable Mortgages</a><br>
-          <a href="#" target="_blank">Professional Moving Crew</a>
-        </p>
-      </div>
-
-      <div>
-        <h3>Follow</h3>
-        <p>
-          <a href="#" target="_blank">Youtube</a><br>
-          <a href="#" target="_blank">Facebook</a><br>
-          <a href="#" target="_blank">Twitter</a>
-        </p>
-      </div>
-    </section>
-  </body>
-</html>
